# archinstall

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: app.rs  init.rs  main.rs  ui.rs
